extensions/wikia/PageLayoutBuilder/css/form.scss
@import "../../../../skins/oasis/css/mixins/border-radius";
@import "../../../../skins/oasis/css/mixins/gradient";
@import "../../../../skins/oasis/css/mixins/box-shadow";
@import "../../../../skins/oasis/css/mixins/clearfix";
@import "../../../../skins/oasis/css/core/color";

div.plb-article-form-space {
	@include clearfix;
	padding-bottom: 5px;
	&.separator {
		border-bottom: 1px solid $color-page-border;
		margin-bottom: 10px;
		padding: 0 0 15px 0;
	}
	&.form {
		padding-bottom: 15px;
	}
}

ul.plb-form-actions {
	list-style: none;
	margin-left: 0;
	li {
		float: left;
		padding-left:1px;
		padding-right:1px;
		span {
			margin-right:8px;
		}
		input {
		    font-size: 16px;
    		height: 40px;
    		padding-left: 15px;
    		padding-right: 15px;
    		margin-bottom: 14px;
		}
		#wpFormSummary {
		    height: auto;
    		padding: 0;
    	}
	}
}

.FormCornerModule {
	@include clearfix;

	a.more {
		clear:both;
	}
	p {
		margin-bottom:10px;
		span {
			font-size: 15px;
			padding-left:9px;
		}
	}
	ul {
		list-style: none;
		margin-top:20px;
		li {
			float: left;
			height:24px;
			line-height:24px;
			padding-right:4px;
			&.first {
				margin-top:3px;
			}
		}
		.username {
			margin-left:7px;
			line-height: 12px;
		}
	}
}

.plb-empty-input {
	color:gray;
}

.plb-empty-select {
	color: $color-text;
}

.plb-mlinput-textarea {
	height: 200px;
	width: 670px;
	margin-top:-1px;
}

.plb-pe-window-preview .plb-mlinput-textarea {
	height: 100px;
}


.WikiaArticle{
	p.plb-form-caption-p {
		margin: 0;
		font-weight: bold;
	}
	&.plb-pe-window-preview {
		min-height: 0px;
	}
}

.plb-input {
	width: 99%;
}

.plb-form-errorbox {
	background-color:#FFFFCC;
	border:1px solid #AAAAAA;
	padding:3px;
	width:100%;
	ul {
		padding-left:30px;
	}
	strong {
		padding-left:13px;
		list-style:none outside none;
	}
}

.plb-form-template-toolbar {
	top: -24px;
	img {
		background-image: url(/extensions/wikia/PageLayoutBuilder/widget/images/toolbar_sprite.png); /* $--wgCdnStylePath */
		border: solid 1px #a2a2a2;
		cursor: pointer;
		&.toolbar-bold {
			background-position: 0 0;
		}
		&.toolbar-italic {
			background-position: 0 -24px;
		}
		&.toolbar-link {
			background-position: 0 -48px;
		}
	}
}

.WikiaArticle a.wikia-button:visited {
	color: $color-button-text;
}

div#WikiaPhotoGalleryOptionsTabs {
	min-height: 4px;
	div {
		display: none;
	}
	div.WikiaPhotoGalleryOptionsTab {
		padding: 0;
		display: none;
	}
}

#WikiaPhotoGalleryEditorCheckboxes {
	display:none;
}

.WikiaPhotoGalleryEditorPage {
	h1{
	
	}
}

#editform #cke_wpTextbox1 {
	margin-top:25px;
}

span.plb-article-title {
	font-size:20px;
	font-weight:bold;
}

input.plb-article-title {
	font-size:24px;
}

