fix test, add line break in PLB Form
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@34090 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/PageLayoutBuilder/css/form.scss
+++ b/extensions/wikia/PageLayoutBuilder/css/form.scss
@@ -24,6 +24,9 @@ ul.plb-form-actions {
 		float: left;
 		padding-left:1px;
 		padding-right:1px;
+		&.summary {
+			float: none;
+		}
 		span {
 			margin-right:8px;
 		}
@@ -99,6 +102,9 @@ ul.plb-form-actions {
 	}
 	&.plb-pe-window-preview {
 		min-height: 0px;
+	}
+	#editpage-copywarn {
+    	margin-top: 60px;
 	}
 }
 
